New backend logic Stops

--- a/Android/BusTracker/package.json
+++ b/Android/BusTracker/package.json
@@ -32,6 +32,7 @@
     "expo-task-manager": "~13.1.6",
     "expo-web-browser": "~14.2.0",
     "firebase": "^12.1.0",
+    "haversine-distance": "^1.2.4",
     "native-base": "^3.4.28",
     "react": "19.0.0",
     "react-dom": "19.0.0",
