--- a/Android/BusTracker/app.json
+++ b/Android/BusTracker/app.json
@@ -20,6 +20,11 @@
         "ACCESS_COARSE_LOCATION",
         "ACCESS_BACKGROUND_LOCATION"
       ],
+      "config": {
+        "googleMaps": {
+          "apiKey": "AIzaSyCa88o_A1r_AOF_yW68P3-uFoIfOBlCnOc"
+        }
+      },
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
@@ -46,6 +51,12 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "bd6d4933-db21-4d61-aa2e-c0cea8a563f8"
+      }
     }
   }
 }
