--- a/Android/BusTracker/app.json
+++ b/Android/BusTracker/app.json
@@ -16,9 +16,7 @@
         "ACCESS_FINE_LOCATION",
         "ACCESS_COARSE_LOCATION",
         "ACCESS_BACKGROUND_LOCATION",
-        "ACCESS_FINE_LOCATION",
-        "ACCESS_COARSE_LOCATION",
-        "ACCESS_BACKGROUND_LOCATION"
+        "FOREGROUND_SERVICE"
       ],
       "config": {
         "googleMaps": {
@@ -30,6 +28,7 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
+      "usesCleartextTraffic": true,
       "package": "com.anonymous.BusTracker"
     },
     "web": {
