--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,6 +18,7 @@
     "express": "^4.19.2",
     "firebase": "^10.12.2",
     "firebase-admin": "^12.1.1",
+    "luxon": "^3.7.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.3",
     "react-firebase-hooks": "^5.1.1"
