--- a/Android/BusTracker/package.json
+++ b/Android/BusTracker/package.json
@@ -25,7 +25,7 @@
     "ajv": "^8.17.1",
     "ajv-keywords": "^5.1.0",
     "babel-plugin-module-resolver": "^5.0.2",
-    "expo": "~53.0.20",
+    "expo": "^54.0.10",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
     "expo-font": "~13.3.2",
@@ -33,6 +33,7 @@
     "expo-image": "~2.4.0",
     "expo-linking": "~7.1.7",
     "expo-location": "~18.1.6",
+    "expo-notifications": "~0.31.4",
     "expo-router": "~5.1.4",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
@@ -58,8 +59,7 @@
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "tailwindcss": "^3.4.17",
-    "expo-notifications": "~0.31.4"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
